messages.properties améliorations

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -73,9 +73,6 @@ latitude=Latitude
 longitude=Longitude
 altitude=Altitude
 commentaire=Commentaire
-commentaire1=Commentaire1
-commentaire2=Commentaire2
-commentaire3=Commentaire3
 oui=oui
 non=non
 detail=Détail
@@ -93,6 +90,11 @@ Total=Total
 Totalpage=Total page
 Ordre=Ordre
 
+# ruchesListePlus.html ruchesListePlusRucher.html
+commentaire1=Commentaire1
+commentaire2=Commentaire2
+commentaire3=Commentaire3
+
 # essaimStatistiques.html
 Max=Max
 Min=Min
@@ -109,8 +111,14 @@ aideStatistiqueRucher=Récolte : nombre de récoltes<br/>Poids de miel produit T
 page=Page
 oups=Oups, quelque chose s'est mal passé !
 
-# Templates ruche
+# rucherDetail.html
 Pasderuche=Pas de ruche actuellement dans ce rucher
+depotNePeutEtreSupprime=Le dépôt ne peut être supprimé
+ruchernonsupprimerefrecolte=Ce rucher ne peut être supprimé, il est référencé dans une récolte
+supprimerruchereteven=Supprimer ce rucher et ses événements ?
+supprimercerucher?=Supprimer ce rucher ?
+
+# ruche
 dateAcquisition=Acquisition
 dateIncorrecte=Date incorrecte
 poidsVide=Poids
@@ -194,7 +202,6 @@ enregistreDessin=Enregistrer le dessin
 type=Type
 nb=Nb
 etat=État
-depotNePeutEtreSupprime=Le dépôt ne peut être supprimé
 
 # carte ign
 pleinecran=Bascule plein écran
@@ -213,9 +220,6 @@ recentrer=Recentrer tous les ruchers sur leurs ruches
 recentrer?=Recentrer tous les ruchers sur leurs ruches ?
 rapprocher=Rapprocher les ruches trop éloignées
 rapprocher?=Rapprocher les ruches trop éloignées ?
-ruchernonsupprimerefrecolte=Ce rucher ne peut être supprimé, il est référencé dans une récolte
-supprimerruchereteven=Supprimer ce rucher et ses événements ?
-supprimercerucher?=Supprimer ce rucher ?
 exportPng=Export PNG
 exportPdf=Export PDF
 exportGPX=Export GPX
@@ -431,20 +435,20 @@ supprimerevenement=Supprimer cet événement ?
 afficherrucheetc=Afficher/masquer ruche, essaim...
 tous=Tous
 
-# météo
+# rucherMeteo.html
 meteo=Météo
+description=Description
 temperature=Température
 humidite=Humidité
 pression=Pression
 ventVitesse=Vent m/s
 ventDirection=Vent Direction
-ventRafales=Vent Rafales
-leverSoleil=Soleil Lever
-coucherSoleil=Soleil Coucher
 nuages=Nuages
+# ventRafales=Vent Rafales
 pluieVol3h=Pluie vol/3h
 neigeVol3h=Neige vol/3h
-description=Description
+leverSoleil=Soleil Lever
+coucherSoleil=Soleil Coucher
 
 apiRest=API REST
 inactifs=Inactifs
