--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -73,9 +73,6 @@ latitude=Latitude
 longitude=Longitude
 altitude=Altitude
 commentaire=Comments
-commentaire1=Comments1
-commentaire2=Comments2
-commentaire3=Comments3
 oui=yes
 non=no
 detail=Detail
@@ -93,6 +90,11 @@ Total=Total
 Totalpage=Total page
 Ordre=Order
 
+# ruchesListePlus.html ruchesListePlusRucher.html
+commentaire1=Comments1
+commentaire2=Comments2
+commentaire3=Comments3
+
 # essaimStatistiques.html
 Max=Max
 Min=Min
@@ -109,8 +111,14 @@ aideStatistiqueRucher=Harvest : number of harvests<br/>Weight of honey produced,
 page=Page
 oups=Oups, something went wrong !
 
-# Templates ruche
+# rucherDetail.html
 Pasderuche=Currently no hive in this apiary
+depotNePeutEtreSupprime=The depot cannot be deleted
+ruchernonsupprimerefrecolte=This apiary cannot be deleted, it is used in a harvest
+supprimerruchereteven=Delete this apiary and all its events?
+supprimercerucher?=Delete this apiary?
+
+# ruche
 dateAcquisition=Acquisition
 dateIncorrecte=Incorrect date
 poidsVide=Weight
@@ -195,7 +203,6 @@ historique=History
 type=Type
 nb=Nb
 etat=State
-depotNePeutEtreSupprime=The depot cannot be deleted
 
 # carte ign
 pleinecran=Toggle full-screen
@@ -214,9 +221,6 @@ recentrer=Recenter all apiaries on their hives
 recentrer?=Recenter all apiaries on their hives?
 rapprocher=Bring closer hives that are too far
 rapprocher?=Bring closer hives that are too far?
-ruchernonsupprimerefrecolte=This apiary cannot be deleted, it is used in a harvest
-supprimerruchereteven=Delete this apiary and all its events?
-supprimercerucher?=Delete this apiary?
 exportPng=PNG export
 exportPdf=PDF export
 exportGPX=GPX export
@@ -431,20 +435,20 @@ supprimerevenement=Delete this event?
 afficherrucheetc=Show/hide hive, swarm...
 tous=All
 
-# météo
+# rucherMeteo.html
 meteo=Weather
+description=Description
 temperature=Temperature
 humidite=Humidity
 pression=Pressure
 ventVitesse=Wind m/s
 ventDirection=Wind Direction
-ventRafales=Wind Gusts
-leverSoleil=Sun Rise
-coucherSoleil=Sun Set
 nuages=Clouds
+# ventRafales=Wind Gusts
 pluieVol3h=Rain vol/3h
 neigeVol3h=Snow vol/3h
-description=Description
+leverSoleil=Sun Rise
+coucherSoleil=Sun Set
 
 apiRest=REST API
 inactifs=Inactives
