message.properties ménage

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -356,23 +356,25 @@ choixHausesRecolte=Choix des hausses de la récolte
 retirerHausses=Retirer des hausses
 selecthaussestraiter=Sélectionner les hausses à traiter
 
-# recolteHausseForm
+# recolteHausseForm.html
 plus=Plus
 poidsAvantSupPoidsApres=Le poids avant extraction doit être supérieur ou égal au poids après extraction.
 poidsVideKg=Poids vide {0}kg
 
-# récolte détail
-detailRecolte=Détail de la récolte
+# recolteDetail.html
+# detailRecolte=Détail de la récolte
 poidsAvant=Poids avant extraction
 poidsApres=Poids après extraction
-recolteHausse=Récolte - Hausse
+# recolteHausse=Récolte - Hausse
 recolteHausseDepot=Enlève toutes les hausses de la récolte de leurs ruches
 enlevertoutesleshaussesrecolte=Enlever toutes les hausses de cette récolte de leurs ruches ?
 supprimerrecolteethausses=Supprimer cette récolte et toutes ses hausses ?
 statistiquesessaims=Statistiques essaims
-productionessaim=Production par essaim.
 saisirpoids=Saisir les poids
 totalPourLaRuche=Total pour la ruche
+
+# recoltesStat.html
+productionessaim=Production par essaim.
 
 # Evénements
 RUCHEAJOUTRUCHER=Ajout dans rucher
