--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -356,23 +356,25 @@ choixHausesRecolte=Select harvest supers
 retirerHausses=Remove supers
 selecthaussestraiter=Select the supers to be processed
 
-# recolteHausseForm
+# recolteHausseForm.html
 plus=More
 poidsAvantSupPoidsApres=The weight before extraction must be greater than or equal to the weight after extraction.
 poidsVideKg=Empty weight {0}kg
 
-# récolte détail
-detailRecolte=Harvest detail
+# recolteDetail.html
+# detailRecolte=Harvest detail
 poidsAvant=Weight before harvest
 poidsApres=Weight after harvest
-recolteHausse=Harvest - Supers
+# recolteHausse=Harvest - Supers
 recolteHausseDepot=Remove all supers of the harvest from their hives
 enlevertoutesleshaussesrecolte=Remove all supers of this harvest from their hives?
 supprimerrecolteethausses=Remove this harvest and all its supers?
 statistiquesessaims=Swarms statistics
-productionessaim=Production by swarm. 
 saisirpoids=Get weight
 totalPourLaRuche=Total for the hive
+
+# recoltesStat.html
+productionessaim=Production by swarm. 
 
 # Evénements
 RUCHEAJOUTRUCHER=Add in an apiary
