message.properties réorganisation

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -79,7 +79,6 @@ detail=Détail
 enregistrer=Enregistrer
 filtrer=Filtrer
 reinitialiser=Réinitialiser
-markerFixes=Marqueurs fixes
 buttontextprint=Imprimer
 buttontextcol=Colonnes
 supprimer=Supprimer
@@ -107,8 +106,8 @@ masquerInactif=Masquer les inactifs
 # rucherStatistiques.html
 aideStatistiqueRucher=Récolte : nombre de récoltes<br/>Poids de miel produit Total, Max, Min et Moyen en kg :<br/>- Total pour le rucher<br/>- Récolte Max et Min<br/>- Moyen par récolte
 
-# error
-page=Page
+# error.html
+page=
 oups=Oups, quelque chose s'est mal passé !
 
 # rucherDetail.html
@@ -135,14 +134,6 @@ ajouterRucheType=Ajouter un type de ruche
 ajoutRuche=Ajout d'une ruche
 listeRuches=Liste des ruches
 daterucher=Date rucher
-
-listeRuchesOrdonnees=Liste des ruches ordonnée suivant le parcours
-listePlusRuchesOrdonnees=Liste détaillée des ruches ordonnée suivant le parcours
-parcours=Parcours
-parcoursoptimum=Parcours optimum des ruches
-ruches=ruches
-distancedeparcours=Distance de parcours
-Entree=Entrée
 
 coordRucher=Coord. rucher
 carteGg=Carte Google
@@ -198,33 +189,46 @@ ressource=Ressource
 ajoutRuches=Ajouter des ruches
 creationevecadrezero=Création événement 0 cadre
 poidsParRuches=Poids/Ruches
-enregistreDessin=Enregistrer le dessin
 type=Type
 nb=Nb
 etat=État
 
-# carte ign
+# rucherDetailIgn.html
+parcours=Parcours
+parcoursoptimum=Parcours optimum des ruches
+ruches=ruches
+distancedeparcours=Distance de parcours
+Entree=Entrée
 pleinecran=Bascule plein écran
 couchemarqueursruches=Couche des marqueurs Ruches
-couchemarqueursruchers=Couche des marqueurs Ruchers
+aiderucherdetailignmarkers=Doubleclic sur une ruche pour afficher son détail<br/>Un clic pour la sélectionner, puis clic pour la déplacer (seulement si la case Marqueurs fixes n'est pas cochée)<br/>Clic sur fond de carte pour désélectionner
+listeRuchesOrdonnees=Liste des ruches ordonnée suivant le parcours
+listePlusRuchesOrdonnees=Liste détaillée des ruches ordonnée suivant le parcours
+markerFixes=Marqueurs fixes
+enregistreDessin=Enregistrer le dessin
+rapprocher=Rapprocher les ruches trop éloignées
+exportGPX=Export GPX
+exportKML=Export KML
+parcoursRecalcul=Re-calculer le parcours des ruches
+
+# carte ign
 ajoutderuches=Ajout de ruches
-rucherscarteign=Ruchers. Carte IGN
 rucherscarteosm=Ruchers. Carte OpenStreetMap
 rucherscarteggmaps=Ruchers. Carte Google
-aiderucherdetailignmarkers=Doubleclic sur une ruche pour afficher son détail<br/>Un clic pour la sélectionner, puis clic pour la déplacer (seulement si la case Marqueurs fixes n'est pas cochée)<br/>Clic sur fond de carte pour désélectionner
+
+# ruhersListeIgn.html
+rucherscarteign=Ruchers. Carte IGN
+couchemarqueursruchers=Couche des marqueurs Ruchers
 aiderucherlisteignmarkers=Doubleclic sur un rucher pour afficher son détail<br/>Un clic pour le sélectionner, puis clic pour le déplacer (seulement si la case Marqueurs fixes n'est pas cochée)<br/>Clic sur fond de carte pour désélectionner
+recentrer?=Recentrer tous les ruchers sur leurs ruches ?
+
 selectruchesretrait=Sélectionner les ruches à retirer
 selectruchesajout=Sélectionner les ruches à ajouter
 ajoutruches=Ajout dans le rucher
 recentrer=Recentrer tous les ruchers sur leurs ruches
-recentrer?=Recentrer tous les ruchers sur leurs ruches ?
-rapprocher=Rapprocher les ruches trop éloignées
 rapprocher?=Rapprocher les ruches trop éloignées ?
 exportPng=Export PNG
 exportPdf=Export PDF
-exportGPX=Export GPX
-exportKML=Export KML
-parcoursRecalcul=Re-calculer le parcours des ruches
 statistiquesruchers=Statistiques ruchers
 cercles=Cercles
 distButinage=Distances de butinage
