--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -79,7 +79,6 @@ detail=Detail
 enregistrer=Save
 filtrer=Filter
 reinitialiser=Reset
-markerFixes=Fixed markers
 buttontextprint=Print
 buttontextcol=Columns
 supprimer=Delete
@@ -107,7 +106,7 @@ masquerInactif=Hide inactives
 # rucherStatistiques.html
 aideStatistiqueRucher=Harvest : number of harvests<br/>Weight of honey produced, Max, Min and Average (kg) :<br/>- Total for apiary<br/>- Harvest Max and Min<br/>- Average by harvest
 
-# error
+# error.html
 page=Page
 oups=Oups, something went wrong !
 
@@ -135,14 +134,6 @@ ajouterRucheType=Add a hive type
 ajoutRuche=Addirion of a hive
 listeRuches=Hives list
 daterucher=Apiary date
-
-listeRuchesOrdonnees=Hives ordered list along the route
-listePlusRuchesOrdonnees=Hives ordered detailed list along the route
-parcours=Route
-parcoursoptimum=Optimum route along the hives
-ruches=hives
-distancedeparcours=Route length
-Entree=Entrance
 
 coordRucher=Apiary coord.
 carteGg=Google Map
@@ -198,34 +189,47 @@ ressource=Resource
 ajoutRuches=Add hives
 creationevecadrezero=Create 0 super event
 poidsParRuches=Weight/Hives
-enregistreDessin=Save drawing
 historique=History
 type=Type
 nb=Nb
 etat=State
 
-# carte ign
+# rucherDetailIgn.html
+parcours=Route
+parcoursoptimum=Optimum route along the hives
+ruches=hives
+distancedeparcours=Route length
+Entree=Entrance
 pleinecran=Toggle full-screen
 couchemarqueursruches=Hive marker layer
-couchemarqueursruchers=Apiary marker layer
+aiderucherdetailignmarkers=Doubleclic on a hive to show details<br/>Clic to select, then clic to move<br/>Clic on map to deselect
+listeRuchesOrdonnees=Hives ordered list along the route
+listePlusRuchesOrdonnees=Hives ordered detailed list along the route
+markerFixes=Fixed markers
+enregistreDessin=Save drawing
+rapprocher=Bring closer hives that are too far
+exportGPX=GPX export
+exportKML=KML export
+parcoursRecalcul=Re-calculate hive route
+
+# carte ign
 ajoutderuches=Add hives
-rucherscarteign=Apiaries. IGN Map
 rucherscarteosm=Apiaries. OpenStreetMap
 rucherscarteggmaps=Apiaries. Google Maps
-aiderucherdetailignmarkers=Doubleclic on a hive to show details<br/>Clic to select, then clic to move<br/>Clic on map to deselect
+
+# ruhersListeIgn.html
+rucherscarteign=Apiaries. IGN Map
+couchemarqueursruchers=Apiary marker layer
 aiderucherlisteignmarkers=Doubleclic on an apiary to show details<br/>Clic to select, then clic to move<br/>Clic on map to deselect 
+recentrer?=Recenter all apiaries on their hives?
+
 selectruchesretrait=Select hives to remove
 selectruchesajout=Select hives to add
 ajoutruches=Addition in hive
 recentrer=Recenter all apiaries on their hives
-recentrer?=Recenter all apiaries on their hives?
-rapprocher=Bring closer hives that are too far
 rapprocher?=Bring closer hives that are too far?
 exportPng=PNG export
 exportPdf=PDF export
-exportGPX=GPX export
-exportKML=KML export
-parcoursRecalcul=Re-calculate hive route
 statistiquesruchers=Apiary statistics
 cercles=Circles
 distButinage=Foraging distances
