message.properties personne

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -36,9 +36,6 @@ forgotPassword=Mot de passe oublié ?
 connecte=Connecté
 deconnexion=Déconnexion
 
-login=Login
-roles=Rôles
-
 # passwordResetForm.html resetPasswordForm.html
 resetPassword=Réinitialistation du mot de passe
 
@@ -233,14 +230,20 @@ statistiquesruchers=Statistiques ruchers
 cercles=Cercles
 distButinage=Distances de butinage
 
-# personne
+# personnesListe.html
 prenom=Prénom
-personne=Personne
 email=Email
-emailexiste=Cet email est déjà utilisé
-lesPersonnes=Personnes
-ajouterPersonne=Ajouter une personne
+login=Login
+roles=Rôles
 listePersonnes=Liste des personnes
+ajouterPersonne=Ajouter une personne
+lesPersonnes=Personnes
+
+# personneForm.html
+emailexiste=Cet email est déjà utilisé
+personne=Personne
+
+# personneDetail.html
 personnenonsupprimeerefrrucher=Cette personne ne peut être supprimée, elle est référencée dans un rucher
 supprimercettepersonne=Supprimer cette personne ?
 
