--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -36,9 +36,6 @@ forgotPassword=Forgot pasword?
 connecte=Connected
 deconnexion=Disconnect
 
-login=Login
-roles=Roles
-
 # passwordResetForm.html resetPasswordForm.html
 resetPassword=Reset password
 
@@ -234,14 +231,20 @@ statistiquesruchers=Apiary statistics
 cercles=Circles
 distButinage=Foraging distances
 
-# personne
+# personnesListe.html
 prenom=First name
-personne=People
 email=Email
-emailexiste=This email is already used
-lesPersonnes=People
-ajouterPersonne=Add a person
+login=Login
+roles=Roles
 listePersonnes=Persons list
+ajouterPersonne=Add a person
+lesPersonnes=People
+
+# personneForm.html
+emailexiste=This email is already used
+personne=People
+
+# personneDetail.html
 personnenonsupprimeerefrrucher=This person cannot be deleted, she is used on an apiary
 supprimercettepersonne=Delete this person?
 
