message.properties ruches

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -4,6 +4,9 @@ Idrucherinconnu=Identifiant rucher inconnu
 Idessaiminconnu=Identifiant essaim inconnu
 Idhausseinconnu=Identifiant hausse inconnu
 
+# RucheController.java
+cloneruchecreees=Ruche(s) {0} créée(s)
+
 # include.html
 include.title=Ruches
 include.footer= *** Ruches - GPL3 - 
@@ -113,6 +116,15 @@ depotNePeutEtreSupprime=Le dépôt ne peut être supprimé
 ruchernonsupprimerefrecolte=Ce rucher ne peut être supprimé, il est référencé dans une récolte
 supprimerruchereteven=Supprimer ce rucher et ses événements ?
 supprimercerucher?=Supprimer ce rucher ?
+nomruchesvirgule=Nom des ruches séparés par une virgule
+
+# rucheDetail.html
+ruchenepeutetresupprimeerecolte=Cette ruche ne peut être supprimée, elle est référencée dans une récolte
+supprimerrucheeteven?=Supprimer cette ruche et ses événements ?
+supprimercetteruche?=Supprimer cette ruche ?
+nomexistentdeja=existe(nt) déjà
+creer=Créer
+cloner=Cloner
 
 # ruche
 dateAcquisition=Acquisition
@@ -143,20 +155,12 @@ dernierevenementsruche=Derniers événements ruche et essaim
 ajoutretraithausses=Ajout/Retrait/Ordre de hausses.
 
 # Ruche detail clone
-cloner=Cloner
-nomruchesvirgule=Nom des ruches séparés par une virgule
-nomexistentdeja=existe(nt) déjà
-cloneruchecreees=Ruche(s) {0} créée(s)
-creer=Créer
 evenementPesee=Ajouter un événement Pesée
 evenementCommentaire=Ajouter un événement Commentaire
 evenementCommentaireRuche=Ajouter un événement Commentaire ruche
 evenementCadres=Ajouter un événement Cadres
 pesee=Pesée
 changerDeRucher=Changer de rucher
-ruchenepeutetresupprimeerecolte=Cette ruche ne peut être supprimée, elle est référencée dans une récolte
-supprimerrucheeteven?=Supprimer cette ruche et ses événements ?
-supprimercetteruche?=Supprimer cette ruche ?
 ajouthausseXXsur=Ajout de la hausse {0} sur la 
 retraithausseXXdela=Retrait de la hausse {0} de la 
 retraithausse=Retrait de hausse 
