--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -4,6 +4,9 @@ Idrucherinconnu=Unknown apiary id
 Idessaiminconnu=Unknown swarm id
 Idhausseinconnu=Unknown super id
 
+# RucheController.java
+cloneruchecreees=Hives(s) {0} created
+
 # include.html
 include.title=Hives
 include.footer= *** Ruches - GPL3 -
@@ -114,6 +117,15 @@ ruchernonsupprimerefrecolte=This apiary cannot be deleted, it is used in a harve
 supprimerruchereteven=Delete this apiary and all its events?
 supprimercerucher?=Delete this apiary?
 
+# rucheDetail.html
+ruchenepeutetresupprimeerecolte=This hive cannot be deleted, it is used in a harvest
+supprimerrucheeteven?=Delete this hive and its events?
+supprimercetteruche?=Delete this hive?
+nomruchesvirgule=Hive names separated with a comma
+nomexistentdeja=already exist(s)
+creer=Create
+cloner=Clone
+
 # ruche
 dateAcquisition=Acquisition
 dateIncorrecte=Incorrect date
@@ -143,20 +155,12 @@ dernierevenementsruche=Last events (hive and swarm)
 ajoutretraithausses=Add/Remove/Order supers. 
 
 # Ruche detail clone
-cloner=Clone
-nomruchesvirgule=Hive names separated with a comma
-nomexistentdeja=already exist(s)
-cloneruchecreees=Hives(s) {0} created
-creer=Create
 evenementPesee=Add a weight event
 evenementCommentaire=Add a comment event
 evenementCommentaireRuche=Add a hive comment event
 evenementCadres=Add a frame event
 pesee=Weighing
 changerDeRucher=Move to another apiary
-ruchenepeutetresupprimeerecolte=This hive cannot be deleted, it is used in a harvest
-supprimerrucheeteven?=Delete this hive and its events?
-supprimercetteruche?=Delete this hive?
 ajouthausseXXsur=Add hive {0} on 
 retraithausseXXdela=Remove super {0} from 
 retraithausse=Remove super 
