--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -107,7 +107,7 @@ masquerInactif=Masquer les inactifs
 aideStatistiqueRucher=Récolte : nombre de récoltes<br/>Poids de miel produit Total, Max, Min et Moyen en kg :<br/>- Total pour le rucher<br/>- Récolte Max et Min<br/>- Moyen par récolte
 
 # error.html
-page=
+page=Page
 oups=Oups, quelque chose s'est mal passé !
 
 # rucherDetail.html
@@ -125,14 +125,16 @@ supprimercetteruche?=Supprimer cette ruche ?
 nomexistentdeja=existe(nt) déjà
 creer=Créer
 cloner=Cloner
+changerDeRucher=Changer de rucher
+dateAcquisition=Acquisition
+nbCadresMax=Cadres max
+typeRuche=Type
+listeHausses=Liste des hausses
 
 # ruche
-dateAcquisition=Acquisition
 dateIncorrecte=Date incorrecte
 poidsVide=Poids
 nbCadres=Cadres
-nbCadresMax=Cadres max
-typeRuche=Type
 rucheType= Type de ruche
 ruche=Ruche
 ruchesDepot=Ruches au dépôt
@@ -160,7 +162,6 @@ evenementCommentaire=Ajouter un événement Commentaire
 evenementCommentaireRuche=Ajouter un événement Commentaire ruche
 evenementCadres=Ajouter un événement Cadres
 pesee=Pesée
-changerDeRucher=Changer de rucher
 ajouthausseXXsur=Ajout de la hausse {0} sur la 
 retraithausseXXdela=Retrait de la hausse {0} de la 
 retraithausse=Retrait de hausse 
@@ -313,7 +314,6 @@ nouvellereine=Remérage : choisir l'essaim à mettre dans la ruche
 # hausse
 hausse=Hausse
 lesHausses=Hausses
-listeHausses=Liste des hausses
 Pasdehausse=Pas de hausse
 retirerreordonnerHausses=Retirer Réordonner (glisser-déposer)
 ajouterHausses=Ajouter des hausses
