messages.properties améliorations

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -117,6 +117,9 @@ ruchernonsupprimerefrecolte=Ce rucher ne peut être supprimé, il est référenc
 supprimerruchereteven=Supprimer ce rucher et ses événements ?
 supprimercerucher?=Supprimer ce rucher ?
 nomruchesvirgule=Nom des ruches séparés par une virgule
+historique=Historique
+poidsVide=Poids
+nbCadres=Cadres
 
 # rucheDetail.html
 ruchenepeutetresupprimeerecolte=Cette ruche ne peut être supprimée, elle est référencée dans une récolte
@@ -130,16 +133,14 @@ dateAcquisition=Acquisition
 nbCadresMax=Cadres max
 typeRuche=Type
 listeHausses=Liste des hausses
-
-# ruche
-dateIncorrecte=Date incorrecte
-poidsVide=Poids
-nbCadres=Cadres
-rucheType= Type de ruche
-ruche=Ruche
-ruchesDepot=Ruches au dépôt
 lesRuches=Ruches
 ordre=Ordre
+
+# rucheTypesListe.html
+rucheType= Type de ruche
+
+# ruche
+ruche=Ruche
 ajouterRuche=Ajouter une ruche
 ajouterRucheType=Ajouter un type de ruche
 ajoutRuche=Ajout d'une ruche
