--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -116,6 +116,8 @@ depotNePeutEtreSupprime=The depot cannot be deleted
 ruchernonsupprimerefrecolte=This apiary cannot be deleted, it is used in a harvest
 supprimerruchereteven=Delete this apiary and all its events?
 supprimercerucher?=Delete this apiary?
+poidsVide=Weight
+nbCadres=Frames
 
 # rucheDetail.html
 ruchenepeutetresupprimeerecolte=This hive cannot be deleted, it is used in a harvest
@@ -130,16 +132,15 @@ dateAcquisition=Acquisition
 nbCadresMax=Frames max
 typeRuche=Type
 listeHausses=Supers list
-
-# ruche
-dateIncorrecte=Incorrect date
-poidsVide=Weight
-nbCadres=Frames
-rucheType= Hive type
-ruche=Hive
-ruchesDepot=Hives in depot
+historique=History
 lesRuches=Hives
 ordre=Order
+
+# rucheTypesListe.html
+rucheType= Hive type
+
+# ruche
+ruche=Hive
 ajouterRuche=Add a hive
 ajouterRucheType=Add a hive type
 ajoutRuche=Addirion of a hive
@@ -191,7 +192,6 @@ ressource=Resource
 ajoutRuches=Add hives
 creationevecadrezero=Create 0 super event
 poidsParRuches=Weight/Hives
-historique=History
 type=Type
 nb=Nb
 etat=State
