messages.properties tri par template

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -136,6 +136,17 @@ listeHausses=Liste des hausses
 lesRuches=Ruches
 ordre=Ordre
 
+# rucheAjoutRetrait.html
+ajoutretraithausses=Ajout/Retrait/Ordre de hausses.
+ajouterhausse=Ajouter cette hausse
+retirerhausse=Retirer cette hausse
+
+# rucheRetraitHausseForm.html
+retraithausseXXdela=Retrait de la hausse {0} de la 
+
+# rucheHausseForm.html
+ajouthausseXXsur=Ajout de la hausse {0} sur la 
+
 # rucheTypesListe.html
 rucheType= Type de ruche
 
@@ -152,10 +163,6 @@ carteGg=Carte Google
 carteIgn=Carte IGN
 carteOsm=Carte OSM
 nomexiste=Ce nom existe déjà
-ajouterhausse=Ajouter cette hausse
-retirerhausse=Retirer cette hausse
-dernierevenementsruche=Derniers événements ruche et essaim
-ajoutretraithausses=Ajout/Retrait/Ordre de hausses.
 
 # Ruche detail clone
 evenementPesee=Ajouter un événement Pesée
@@ -163,9 +170,6 @@ evenementCommentaire=Ajouter un événement Commentaire
 evenementCommentaireRuche=Ajouter un événement Commentaire ruche
 evenementCadres=Ajouter un événement Cadres
 pesee=Pesée
-ajouthausseXXsur=Ajout de la hausse {0} sur la 
-retraithausseXXdela=Retrait de la hausse {0} de la 
-retraithausse=Retrait de hausse 
 
 evenruchercadreaide=B bâti, G gaufré, A amorcé, M Miel, P Pollen, I indéterminé, V vide, T partition, Couvain operculé O, ouvert U
 
