--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -136,6 +136,17 @@ historique=History
 lesRuches=Hives
 ordre=Order
 
+# rucheAjoutRetrait.html
+ajoutretraithausses=Add/Remove/Order supers.
+ajouterhausse=Add this super
+retirerhausse=Remove this super
+
+# rucheRetraitHausseForm.html
+retraithausseXXdela=Remove super {0} from 
+
+# rucheHausseForm.html
+ajouthausseXXsur=Add hive {0} on 
+
 # rucheTypesListe.html
 rucheType= Hive type
 
@@ -152,10 +163,6 @@ carteGg=Google Map
 carteIgn=IGN Map
 carteOsm=OSM Map
 nomexiste=This name already exist
-ajouterhausse=Add this super
-retirerhausse=Remove this super
-dernierevenementsruche=Last events (hive and swarm)
-ajoutretraithausses=Add/Remove/Order supers. 
 
 # Ruche detail clone
 evenementPesee=Add a weight event
@@ -163,9 +170,6 @@ evenementCommentaire=Add a comment event
 evenementCommentaireRuche=Add a hive comment event
 evenementCadres=Add a frame event
 pesee=Weighing
-ajouthausseXXsur=Add hive {0} on 
-retraithausseXXdela=Remove super {0} from 
-retraithausse=Remove super 
 
 evenruchercadreaide=B built, G embossed, A initiated, M Honey, P Pollen, I Indeterminate, V empty, T partition, Non sealed brood O, open U
 
