lot de commentaires essaim

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -257,6 +257,20 @@ personne=Personne
 personnenonsupprimeerefrrucher=Cette personne ne peut être supprimée, elle est référencée dans un rucher
 supprimercettepersonne=Supprimer cette personne ?
 
+# essaimsListe.html
+evenementsSucre=Ajouter des événements Sucre
+evenementsTraitement=Ajouter des événements Traitement
+evenementsCommentaire=Ajouter des événements Commentaire
+
+# essaimSucreLotForm.html
+ajoutSucreLot=Ajout de sucre au lot d'essaims 
+
+# essaimTraitementLotForm.html
+traitementLot=Traitement Varroa du lot d'essaims 
+
+# essaimCommentaireLotForm.html
+commentaireLot=Ajout d'un commentaire à un lot d'essaims 
+
 # essaim
 evenementCommentaireEssaim=Ajouter un événement Commentaire essaim
 essaim=Essaim
@@ -264,7 +278,6 @@ Pasdessaim=Pas d'essaim
 lesEssaims=Essaims
 nomessaimsvirgule=Nom des essaims séparés par une virgule.\nOu avec le nom d'une ruche après le nom\nd'un essaim séparés par un point virgule
 traitement=Traitement varroa
-traitementLot=Traitement Varroa du lot d'essaims 
 reineMarquee=Reine marquée
 reineCouleurMarquage=Couleur de marquage
 reineDateNaissance=Date de naissance
@@ -276,7 +289,6 @@ actionSucre=Sucre
 sucreAjout=Sucre ajout
 sucreRestant=Sucre restant
 ajoutSucre=Ajout de sucre 
-ajoutSucreLot=Ajout de sucre au lot d'essaims 
 BLUE=Bleu
 WHITE=Blanc
 YELLOW=Jaune
@@ -288,8 +300,6 @@ dispersion=Dispersion
 evenementSucre=Ajouter un événement Sucre
 evenementTraitement=Ajouter un événement Traitement
 evenementDispersion=Disperser/Remérer
-evenementsSucre=Ajouter des événements Sucre
-evenementsTraitement=Ajouter des événements Traitement
 associationruche=Associer avec une ruche
 association=Association
 essaimdanslaruche=Cet essaim est dans la ruche
