--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -257,6 +257,20 @@ personne=People
 personnenonsupprimeerefrrucher=This person cannot be deleted, she is used on an apiary
 supprimercettepersonne=Delete this person?
 
+# essaimsListe.html
+evenementsSucre=Add sugar events
+evenementsTraitement=Add treatment events
+evenementsCommentaire=Add comment events
+
+# essaimSucreLotForm.html
+ajoutSucreLot=Add sugar to the batch of swarms 
+
+# essaimTraitementLotForm.html
+traitementLot=Batch Varroa treatment 
+
+# essaimCommentaireLotForm.html
+commentaireLot=Add a comment to the batch of swarms 
+
 # essaim
 evenementCommentaireEssaim=Add a swarm comment event
 essaim=Swarm
@@ -264,7 +278,6 @@ Pasdessaim=No swarm
 lesEssaims=Swarms
 nomessaimsvirgule=Swarm names separated with a comma\nOr with the name of a hive after the name\nof a swarm separated by a semicolon 
 traitement=Varroa treatment
-traitementLot=Batch Varroa treatment 
 reineMarquee=Marked queen
 reineCouleurMarquage=Marking color
 reineDateNaissance=Date of birth
@@ -276,7 +289,6 @@ actionSucre=Sugar
 sucreAjout=Added sugar
 sucreRestant=Left sugar
 ajoutSucre=Add sugar 
-ajoutSucreLot=Add sugar to the batch of swarms 
 BLUE=Bleu
 WHITE=Blanc
 YELLOW=Jaune
@@ -288,8 +300,6 @@ dispersion=Dispersing
 evenementSucre=Add a sugar event
 evenementTraitement=Add a treatment event
 evenementDispersion=Add a dispersion event/Change queen
-evenementsSucre=Add sugar events
-evenementsTraitement=Add treatment events
 associationruche=Association with a hive
 association=Association
 essaimdanslaruche=This swarm in in hive
