messages.properties améliorations

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -171,12 +171,11 @@ evenementCommentaireRuche=Ajouter un événement Commentaire ruche
 evenementCadres=Ajouter un événement Cadres
 pesee=Pesée
 
-evenruchercadreaide=B bâti, G gaufré, A amorcé, M Miel, P Pollen, I indéterminé, V vide, T partition, Couvain operculé O, ouvert U
-
 # rucheCadreForm
 cadresLe=cadres le
+evenruchercadreaide=B bâti, G gaufré, A amorcé, M Miel, P Pollen, I indéterminé, V vide, T partition, Couvain operculé O, ouvert U
  
-# descendance
+# essaimGraphe.html
 MielKg=Miel(kg)
 MielDescKg=Miel descendance(kg) 
 
@@ -258,9 +257,23 @@ personnenonsupprimeerefrrucher=Cette personne ne peut être supprimée, elle est
 supprimercettepersonne=Supprimer cette personne ?
 
 # essaimsListe.html
+selectesssaimstraiter=Sélectionner les essaims à traiter
 evenementsSucre=Ajouter des événements Sucre
 evenementsTraitement=Ajouter des événements Traitement
 evenementsCommentaire=Ajouter des événements Commentaire
+BLUE=Bleu
+WHITE=Blanc
+YELLOW=Jaune
+RED=Rouge
+GREEN=Vert
+ORANGE=
+ajouterEssaim=Ajouter un essaim
+reineMarquee=Reine marquée
+reineCouleurMarquage=Couleur de marquage
+reineDateNaissance=Date de naissance
+souche=Souche
+agressivite=Agressivité
+proprete=Propreté
 
 # essaimSucreLotForm.html
 ajoutSucreLot=Ajout de sucre au lot d'essaims 
@@ -278,24 +291,13 @@ Pasdessaim=Pas d'essaim
 lesEssaims=Essaims
 nomessaimsvirgule=Nom des essaims séparés par une virgule.\nOu avec le nom d'une ruche après le nom\nd'un essaim séparés par un point virgule
 traitement=Traitement varroa
-reineMarquee=Reine marquée
-reineCouleurMarquage=Couleur de marquage
-reineDateNaissance=Date de naissance
 enleverEssaim=Enlever l'essaim de la ruche 
 associerRucheEssaim=Associer une ruche à cet essaim
-ajouterEssaim=Ajouter un essaim
 listeEssaims=Liste des essaims
 actionSucre=Sucre
 sucreAjout=Sucre ajout
 sucreRestant=Sucre restant
 ajoutSucre=Ajout de sucre 
-BLUE=Bleu
-WHITE=Blanc
-YELLOW=Jaune
-RED=Rouge
-GREEN=Vert
-ORANGE=
-selectesssaimstraiter=Sélectionner les essaims à traiter
 dispersion=Dispersion 
 evenementSucre=Ajouter un événement Sucre
 evenementTraitement=Ajouter un événement Traitement
@@ -312,10 +314,6 @@ supprimeressaim=Supprimer cette essaim ?
 mettreessaimdansruche=Mettre l'essaim dans cette ruche
 retourrucheaudepot=Retour de la ruche au dépôt
 graphedescendance=Graphe de descendance
-souche=Souche
-
-agressivite=Agressivité
-proprete=Propreté
 
 cloneessaimcrees=Essaim(s) {0} créé(s)
 
