--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -171,13 +171,12 @@ evenementCommentaireRuche=Add a hive comment event
 evenementCadres=Add a frame event
 pesee=Weighing
 
-evenruchercadreaide=B built, G embossed, A initiated, M Honey, P Pollen, I Indeterminate, V empty, T partition, Non sealed brood O, open U
-
 # rucheCadreForm
 cadresLe=frames on
+evenruchercadreaide=B built, G embossed, A initiated, M Honey, P Pollen, I Indeterminate, V empty, T partition, Non sealed brood O, open U
 
-# descendance
-MielKg=Hoey(kg)
+# essaimGraphe.html
+MielKg=Honey(kg)
 MielDescKg=Descendants honey(kg) 
 
 # rucher
@@ -258,9 +257,23 @@ personnenonsupprimeerefrrucher=This person cannot be deleted, she is used on an 
 supprimercettepersonne=Delete this person?
 
 # essaimsListe.html
+selectesssaimstraiter=Select swarms for treatment
 evenementsSucre=Add sugar events
 evenementsTraitement=Add treatment events
 evenementsCommentaire=Add comment events
+BLUE=Blue
+WHITE=White
+YELLOW=Yellow
+RED=Red
+GREEN=Green
+ORANGE=
+ajouterEssaim=Add a swarm
+reineMarquee=Marked queen
+reineCouleurMarquage=Marking color
+reineDateNaissance=Date of birth
+souche=Stem
+agressivite=Agressiveness
+proprete=Cleanliness
 
 # essaimSucreLotForm.html
 ajoutSucreLot=Add sugar to the batch of swarms 
@@ -278,24 +291,13 @@ Pasdessaim=No swarm
 lesEssaims=Swarms
 nomessaimsvirgule=Swarm names separated with a comma\nOr with the name of a hive after the name\nof a swarm separated by a semicolon 
 traitement=Varroa treatment
-reineMarquee=Marked queen
-reineCouleurMarquage=Marking color
-reineDateNaissance=Date of birth
 enleverEssaim=Remove the swarm from the hive 
 associerRucheEssaim=Associate a hive to this swarm
-ajouterEssaim=Add a swarm
 listeEssaims=Swarms list
 actionSucre=Sugar
 sucreAjout=Added sugar
 sucreRestant=Left sugar
 ajoutSucre=Add sugar 
-BLUE=Bleu
-WHITE=Blanc
-YELLOW=Jaune
-RED=Rouge
-GREEN=Vert
-ORANGE=
-selectesssaimstraiter=Select swarms for treatment
 dispersion=Dispersing 
 evenementSucre=Add a sugar event
 evenementTraitement=Add a treatment event
@@ -312,10 +314,6 @@ supprimeressaim=Delete this swarm?
 mettreessaimdansruche=Put swarm in this hive
 retourrucheaudepot=Hive back to depot
 graphedescendance=Descendants graph
-souche=Stem
-
-agressivite=Agressiveness
-proprete=Cleanliness
 
 cloneessaimcrees=Swarm(s) {0} created
 
